# liquidd

./: .clang-format  .clang-tidy  .gitignore  README.md  driver.c  driver.h  driver_hid.c  driver_hid.h  driver_nzxt_smart2.c  driver_nzxt_smart2.h  hid_device.c  hid_device.h  hid_device_info.c  hid_device_info.h  hid_manager.c  hid_manager.h  liquidctl.c  liquidd.c  main.c  meson.build  meson_options.txt  org.liquidctl.FanSpeedRPM.xml  org.liquidctl.HidDevice.xml  org.liquidctl.InitDevice.xml
aux/: liquidd.sublime-project.in  meson-devconfig.ini
